--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,14 @@ dependencies = [
     "flwr[simulation]>=1.15.2",
     "syft-core>=0.1.0",
     "syft-rpc>=0.1.0",
+    "loguru>=0.7.3",
+]
+
+[tool.uv]
+dev-dependencies = [
+    "ipykernel>=6.29.5",
+    "ipywidgets>=8.1.5",
+    "matplotlib>=3.9.4",
 ]
 
 [build-system]
