--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ dev-dependencies = [
 ]
 
 [tool.uv.sources]
-syft-event = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-event", rev = "main" }
-syft-rpc = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-rpc", rev = "main" }
+syft-event = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-event", rev = "HEAD" }
+syft-rpc = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-rpc", rev = "HEAD" }
 
 [build-system]
 requires = ["hatchling"]
