--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "Debug serverapp",
       "type": "debugpy",
       "request": "launch",
-      "program": "examples/serverapp/server.py",
+      "program": "examples/basic/server.py",
       "console": "integratedTerminal",
       "justMyCode": false
     },
