--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dev-dependencies = [
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.5",
     "matplotlib>=3.9.4",
+    "pytest>=8.3.4",
 ]
 
 [tool.uv.sources]
