--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dev-dependencies = [
     "ipywidgets>=8.1.5",
     "matplotlib>=3.9.4",
     "pytest>=8.3.4",
+    "pre-commit>=3.5.4",
 ]
 
 [tool.uv.sources]
