--- a/examples/quickstart/pyproject.toml
+++ b/examples/quickstart/pyproject.toml
@@ -32,5 +32,5 @@ default = "local-simulation"
 options.num-supernodes = 10
 
 [tool.syft_flwr]
-datasites = ["khoa@openmined.org", "rasswanth@openmined.org" ]
-aggregator = "khoa@openmined.org"
+datasites = ["b@openmined.org", "c@openmined.org" ]
+aggregator = "a@openmined.org"
