--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "syft-event",
     "loguru>=0.7.3",
     "safetensors>=0.5.0",
+    "typer>=0.11.1",
 ]
 
 [tool.uv]
@@ -42,3 +43,6 @@ extend-select = ["I"]
 
 [tool.ruff.lint.per-file-ignores]
 "**/__init__.py" = ["F401"]
+
+[project.scripts]
+syft_flwr = "syft_flwr.main:main"
