--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ syft_flwr = "syft_flwr.cli:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.sdist]
+exclude = ["examples", "notebooks", "justfile"]
+
 [tool.uv]
 dev-dependencies = [
     "ipykernel>=6.29.5",
