move generating example datasets to `utils.py`. remove `generate_dataset.py` for quickstart-pytorch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "flwr[simulation]==1.15.2",
+    "flwr-datasets[vision]>=0.5.0",
     "syft-core",
     "syft-rpc",
     "syft-event",
