--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "tomli>=2.2.1",
     "tomli-w>=1.2.0",
     "syft-rds",
+    "torch==2.5.1",
+    "torchvision==0.20.1",
 ]
 
 [project.scripts]
