--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ name = "syft-flwr"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9.2"
 dependencies = [
-    "flwr[simulation]==1.15.2",
+    "flwr[simulation]>=1.17.0",
     "flwr-datasets[vision]>=0.5.0",
     "syft-core",
     "syft-rpc",
