--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9.2"
 dependencies = [
-    "flwr[simulation]>=1.17.0",
+    "flwr[simulation]==1.17.0",
     "flwr-datasets[vision]>=0.5.0",
     "loguru>=0.7.3",
     "safetensors>=0.5.0",
     "typing-extensions>=4.13.0",
     "tomli>=2.2.1",
     "tomli-w>=1.2.0",
+    "packaging>=23.1",
     "syft-core",
     "syft-rpc",
     "syft-event",
