--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "typing-extensions>=4.13.0",
     "tomli>=2.2.1",
     "tomli-w>=1.2.0",
+    "nest_asyncio>=1.6.0",
     "syft-core",
     "syft-event",
     "syft-rpc",
