--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ dependencies = [
     "typing-extensions>=4.13.0",
     "tomli>=2.2.1",
     "tomli-w>=1.2.0",
-    "syft-core",
-    "syft-event",
-    "syft-rpc",
-    "syft-rds",
+    "syft-core==0.2.3",
+    "syft-event==0.2.0",
+    "syft-rpc==0.2.0",
+    "syft-rds==0.1.0",
 ]
 
 [project.scripts]
@@ -25,25 +25,22 @@ syft_flwr = "syft_flwr.cli:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.hatch.build.targets.sdist]
-exclude = ["examples", "notebooks", "justfile"]
-
 [tool.uv]
 dev-dependencies = [
     "ipykernel>=6.29.5",
-    "ipywidgets>=8.1.5",
+    "ipywidgets>=8.1.6",
     "pytest>=8.3.4",
     "pre-commit>=4.0.1",
 ]
 
-[tool.uv.sources]
-syft-core = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-core", rev = "main" }
-syft-event = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-event", rev = "main" }
-syft-rpc = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-rpc", rev = "main" }
-syft-rds = { git = "https://github.com/OpenMined/rds.git", subdirectory = "syft-rds", rev = "main" }
-
 [tool.hatch.build.targets.wheel]
 packages = ["src/syft_flwr"]
+only-include = ["src", "pyproject.toml", "/README.md"]
+exclude = ["src/**/__pycache__"]
+
+[tool.hatch.build.targets.sdist]
+only-include = ["src", "pyproject.toml", "/README.md"]
+exclude = ["src/**/__pycache__", "examples", "notebooks", "justfile"]
 
 [tool.ruff]
 exclude = [".archive"]
