--- a/notebooks/Demo-FL-Diabetes-Prediction/fl-diabetes-prediction/pyproject.toml
+++ b/notebooks/Demo-FL-Diabetes-Prediction/fl-diabetes-prediction/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "scikit-learn==1.6.1",
     "loguru",
     "jupyter",
-    "syft_flwr==0.1.0",
+    "syft_flwr==0.1.1",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -44,3 +44,10 @@ default = "local-simulation"
 [tool.flwr.federations.local-simulation.options]
 num-supernodes = 2
 
+[tool.syft_flwr]
+app_name = "khoa@openmined.org_fl-diabetes-prediction_1748246582"
+datasites = [
+    "flower-test-group-1@openmined.org",
+    "flower-test-group-2@openmined.org",
+]
+aggregator = "khoa@openmined.org"
