--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "syft-flwr"
-version = "0.1.2"
+version = "0.1.3"
 description = "syft_flwr is an open source framework that facilitate federated learning projects using Flower over the SyftBox protocol"
 readme = "README.md"
 requires-python = ">=3.9.2"
@@ -13,9 +13,9 @@ dependencies = [
     "tomli>=2.2.1",
     "tomli-w>=1.2.0",
     "syft-core==0.2.3",
-    "syft-event==0.2.2",
-    "syft-rpc==0.2.1",
-    "syft-rds==0.1.2",
+    "syft-event==0.2.3",
+    "syft-rpc==0.2.2",
+    "syft-rds==0.1.3",
 ]
 
 [project.scripts]
@@ -35,7 +35,7 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/syft_flwr"]
-only-include = ["src", "pyproject.toml", "/README.md"]
+only-include = ["src"]
 exclude = ["src/**/__pycache__"]
 
 [tool.hatch.build.targets.sdist]
