--- a/notebooks/fl-diabetes-prediction/pyproject.toml
+++ b/notebooks/fl-diabetes-prediction/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "fl-diabetes-prediction"
 version = "0.1.0"
@@ -13,7 +17,7 @@ dependencies = [
     "pandas>=2.3.0",
     "ipywidgets>=8.1.7",
     "scikit-learn==1.6.1",
-    "syft-flwr>=0.1.5",
     "torch==2.7.0",
     "ray>=2.0.0",
+    "syft-flwr>=0.1.6",
 ]
