--- a/notebooks/fl-diabetes-prediction/pyproject.toml
+++ b/notebooks/fl-diabetes-prediction/pyproject.toml
@@ -1,11 +1,7 @@
-[build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
 [project]
-name = "fl-diabetes-prediction"
+name = "fl-diabetes-prediction-workspace"
 version = "0.1.0"
-description = "Diabetes prediction using federated learning with Flower and Syft"
+description = "Workspace for diabetes prediction using federated learning with Flower and Syft"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
@@ -21,3 +17,6 @@ dependencies = [
     "ray>=2.0.0",
     "syft-flwr>=0.1.6",
 ]
+
+[tool.uv]
+package = false
