diagrams, video, local notebooks for federated analytics

--- a/notebooks/federated-analytics-diabetes/fed-analytics-diabetes/pyproject.toml
+++ b/notebooks/federated-analytics-diabetes/fed-analytics-diabetes/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "flwr-datasets[vision]>=0.5.0",
     "numpy>=2.0.2",
     "pandas==2.2.3",
-    "syft_flwr==0.1.5",
+    "syft_flwr==0.1.6",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -45,9 +45,9 @@ default = "local-simulation"
 num-supernodes = 2
 
 [tool.syft_flwr]
-app_name = "khoa@openmined.org_fed-analytics-diabetes_1752540460"
+app_name = "ds@openmined.org_fed-analytics-diabetes_1753773850"
 datasites = [
-    "flower-test-group-1@openmined.org",
-    "flower-test-group-2@openmined.org",
+    "do1@openmined.org",
+    "do2@openmined.org",
 ]
-aggregator = "khoa@openmined.org"
+aggregator = "ds@openmined.org"
