--- a/notebooks/fedrag/pyproject.toml
+++ b/notebooks/fedrag/pyproject.toml
@@ -8,11 +8,12 @@ version = "1.0.0"
 description = ""
 license = "Apache-2.0"
 dependencies = [
-    "flwr[simulation]>=1.20.0",
+    "syft-flwr>=0.1.7",
     "numpy>=1.26.0,<2",
     "faiss-cpu>=1.10.0",
     "tqdm>=4.67",
-    "sentence_transformers>=3.4.1",
+    "sentence_transformers>=5.0.0",
+    "jupyterlab>=4.4.6",
 ]
 
 [tool.hatch.build.targets.wheel]
