--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
 name = "syft-flwr"
-version = "0.1.7"
+version = "0.1.8"
 description = "syft_flwr is an open source framework that facilitate federated learning projects using Flower over the SyftBox protocol"
 readme = "README.md"
 requires-python = ">=3.9.2"
 dependencies = [
+    "syft-rds>=0.1.6",
     "flwr[simulation]>=1.20.0",
     "flwr-datasets[vision]>=0.5.0",
     "loguru>=0.7.3",
@@ -12,8 +13,10 @@ dependencies = [
     "typing-extensions>=4.13.0",
     "tomli>=2.2.1",
     "tomli-w>=1.2.0",
-    "syft-rds==0.1.5",
 ]
+
+[tool.uv.sources]
+syft-rds = { path = "../syft-data-science" }
 
 [project.scripts]
 syft_flwr = "syft_flwr.cli:main"
