--- a/notebooks/federated-analytics-diabetes/fed-analytics-diabetes/pyproject.toml
+++ b/notebooks/federated-analytics-diabetes/fed-analytics-diabetes/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "flwr-datasets[vision]>=0.5.0",
     "numpy>=2.0.2",
     "pandas==2.2.3",
-    "syft_flwr==0.1.7",
+    "syft_flwr",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -42,3 +42,4 @@ default = "local-simulation"
 
 [tool.flwr.federations.local-simulation.options]
 num-supernodes = 2
+
