fl-diabetes-prediction notebooks

--- a/notebooks/fl-diabetes-prediction/fl-diabetes-prediction/pyproject.toml
+++ b/notebooks/fl-diabetes-prediction/fl-diabetes-prediction/pyproject.toml
@@ -19,6 +19,9 @@ dependencies = [
     "jupyter",
 ]
 
+# [tool.uv.sources.syft-flwr]  # for development
+# path = "../../../"
+
 [tool.hatch.build.targets.wheel]
 packages = [
     ".",
