--- a/notebooks/fl-diabetes-prediction/pyproject.toml
+++ b/notebooks/fl-diabetes-prediction/pyproject.toml
@@ -5,7 +5,7 @@ description = "Workspace for diabetes prediction using federated learning with F
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "syft-flwr>=0.1.7",
+    "syft-flwr>=0.2.0",
     "flwr-datasets>=0.5.0",
     "imblearn>=0.0",
     "jupyterlab>=4.4.4",
@@ -19,3 +19,6 @@ dependencies = [
 
 [tool.uv]
 package = false
+
+# [tool.uv.sources]  # for development
+# syft-flwr = { path = "../../" }
