Update version to 0.2.1, stop supporting Flower pre v1.17

--- a/notebooks/federated-analytics-diabetes/fed-analytics-diabetes/pyproject.toml
+++ b/notebooks/federated-analytics-diabetes/fed-analytics-diabetes/pyproject.toml
@@ -19,6 +19,9 @@ dependencies = [
     "syft_flwr",
 ]
 
+# [tool.uv.sources.syft-flwr]
+# path = "../../../"  # for development
+
 [tool.hatch.build.targets.wheel]
 packages = [
     ".",
@@ -42,4 +45,3 @@ default = "local-simulation"
 
 [tool.flwr.federations.local-simulation.options]
 num-supernodes = 2
-
