--- a/notebooks/fl-diabetes-prediction/fl-diabetes-prediction/pyproject.toml
+++ b/notebooks/fl-diabetes-prediction/fl-diabetes-prediction/pyproject.toml
@@ -17,9 +17,10 @@ dependencies = [
     "scikit-learn==1.6.1",
     "loguru",
     "jupyter",
+    "syft_flwr",
 ]
 
-# [tool.uv.sources.syft-flwr]  # for development
+# [tool.uv.sources.syft-flwr]
 # path = "../../../"
 
 [tool.hatch.build.targets.wheel]
@@ -44,3 +45,4 @@ default = "local-simulation"
 
 [tool.flwr.federations.local-simulation.options]
 num-supernodes = 2
+
