--- a/notebooks/fedrag/pyproject.toml
+++ b/notebooks/fedrag/pyproject.toml
@@ -8,8 +8,8 @@ version = "1.0.0"
 description = ""
 license = "Apache-2.0"
 dependencies = [
-    "syft-flwr>=0.1.7",
-    "numpy>=1.26.0,<2",
+    "syft-flwr>=0.2.1",
+    "numpy>=2.3.0",
     "faiss-cpu>=1.10.0",
     "tqdm>=4.67",
     "sentence_transformers>=5.0.0",
