--- a/notebooks/fedrag/fedrag_v1/pyproject.toml
+++ b/notebooks/fedrag/fedrag_v1/pyproject.toml
@@ -52,3 +52,10 @@ num-supernodes = 2
 num-cpus = 2
 num-gpus = 0
 
+[tool.syft_flwr]
+app_name = "ds@openmined.org_fedrag_1757321901"
+datasites = [
+    "do1@openmined.org",
+    "do2@openmined.org",
+]
+aggregator = "ds@openmined.org"
