--- a/notebooks/fedrag/pyproject.toml
+++ b/notebooks/fedrag/pyproject.toml
@@ -14,8 +14,8 @@ dependencies = [
     "loguru>=0.7.3",
     "matplotlib>=3.8.3",
     "ipywidgets>=8.1.7",
-    "syft-flwr>=0.2.1",
+    "syft-flwr",
 ]
 
-# [tool.uv.sources]
-# syft-flwr = { path = "../../" }  # for development
+[tool.uv.sources]
+syft-flwr = { path = "../../" }  # for development
