--- a/notebooks/fedrag/pyproject.toml
+++ b/notebooks/fedrag/pyproject.toml
@@ -5,7 +5,7 @@ description = "A federated RAG system combined with general job submission and a
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "flwr[simulation]>=1.20.0",
+    "syft-flwr>=0.2.2",
     "numpy>=2.3.0",
     "faiss-cpu>=1.10.0",
     "tqdm>=4.67",
@@ -14,8 +14,7 @@ dependencies = [
     "loguru>=0.7.3",
     "matplotlib>=3.8.3",
     "ipywidgets>=8.1.7",
-    "syft-flwr",
 ]
 
-[tool.uv.sources]
-syft-flwr = { path = "../../" }  # for development
+# [tool.uv.sources]
+# syft-flwr = { path = "../../" }  # for development
