integrating with syft-rds 0.3.0 (syft-event 0.4.0)

--- a/notebooks/federated-analytics-diabetes/pyproject.toml
+++ b/notebooks/federated-analytics-diabetes/pyproject.toml
@@ -15,5 +15,5 @@ dependencies = [
     "seaborn>=0.13.2",
 ]
 
-# [tool.uv.sources]
-# syft-flwr = { path = "../../" }  # for development
+[tool.uv.sources]
+syft-flwr = { path = "../../" }  # for development
