--- a/notebooks/federated-analytics-diabetes/pyproject.toml
+++ b/notebooks/federated-analytics-diabetes/pyproject.toml
@@ -5,7 +5,7 @@ description = "Diabetes analytics with syft_flwr and SyftBox"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "syft-flwr>=0.2.2",
+    "syft-flwr>=0.3.0",
     "flwr-datasets>=0.5.0",
     "jupyterlab>=4.4.5",
     "loguru>=0.7.3",
@@ -15,5 +15,5 @@ dependencies = [
     "seaborn>=0.13.2",
 ]
 
-[tool.uv.sources]
-syft-flwr = { path = "../../" }  # for development
+# [tool.uv.sources]
+# syft-flwr = { path = "../../" }  # for development
