chore: update development dependencies for editable installs

--- a/notebooks/federated-analytics-diabetes/pyproject.toml
+++ b/notebooks/federated-analytics-diabetes/pyproject.toml
@@ -16,4 +16,4 @@ dependencies = [
 ]
 
 # [tool.uv.sources]
-# syft-flwr = { path = "../../" }  # for development
+# syft-flwr = { path = "../../", editable = true }  # for development
