--- a/notebooks/federated-analytics-diabetes/fed-analytics-diabetes/pyproject.toml
+++ b/notebooks/federated-analytics-diabetes/fed-analytics-diabetes/pyproject.toml
@@ -19,8 +19,8 @@ dependencies = [
     "syft_flwr",
 ]
 
-# [tool.uv.sources.syft-flwr]
-# path = "../../../"  # for development
+# [tool.uv.sources]
+# syft-flwr = { path = "../../../", editable = true }  # for development
 
 [tool.hatch.build.targets.wheel]
 packages = [
