--- a/notebooks/fl-diabetes-prediction/pyproject.toml
+++ b/notebooks/fl-diabetes-prediction/pyproject.toml
@@ -17,8 +17,8 @@ dependencies = [
     "ray>=2.48.0",
 ]
 
-# [tool.uv.sources]  # for development
-# syft-flwr = { path = "../../" }
+[tool.uv.sources]
+syft-flwr = { path = "../../" , editable = true }  # for development
 
 [tool.uv]
 package = false
