--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,15 +15,14 @@ dependencies = [
     "tomli-w>=1.2.0",
 ]
 
-# [tool.uv.sources]
-# syft-rds = { path = "../syft-data-science" }  # for development
-
+[tool.uv.sources]
+syft-rds = { path = "../syft-rds", editable = true }  # for development
 
 [project.scripts]
 syft_flwr = "syft_flwr.cli:main"
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "ipykernel>=6.30.1",
     "ipywidgets>=8.1.7",
     "pytest>=8.4.1",
