--- a/notebooks/fl-diabetes-prediction/fl-diabetes-prediction/pyproject.toml
+++ b/notebooks/fl-diabetes-prediction/fl-diabetes-prediction/pyproject.toml
@@ -42,6 +42,11 @@ clientapp = "fl_diabetes_prediction.client_app:app"
 num-server-rounds = 2
 partition-id = 0
 num-partitions = 1
+min-available-clients = 1
+min-fit-clients = 1
+min-evaluate-clients = 1
+fraction-fit = 1.0
+fraction-evaluate = 1.0
 
 [tool.flwr.federations]
 default = "local-simulation"
@@ -50,7 +55,7 @@ default = "local-simulation"
 num-supernodes = 2
 
 [tool.syft_flwr]
-app_name = "ds@openmined.org_fl-diabetes-prediction_1760437649"
+app_name = "ds@openmined.org_fl-diabetes-prediction_1760595439"
 datasites = [
     "do1@openmined.org",
     "do2@openmined.org",
