--- a/notebooks/fl-diabetes-prediction/pyproject.toml
+++ b/notebooks/fl-diabetes-prediction/pyproject.toml
@@ -3,7 +3,7 @@ name = "fl-diabetes-prediction-workspace"
 version = "0.1.0"
 description = "Workspace for diabetes prediction using federated learning with Flower and Syft"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11,<3.14"
 dependencies = [
     "syft-flwr>=0.4.1",
     "flwr-datasets>=0.5.0",
@@ -14,11 +14,12 @@ dependencies = [
     "ipywidgets>=8.1.7",
     "scikit-learn==1.7.1",
     "torch>=2.8.0",
-    "ray>=2.48.0",
+    "ray==2.31.0",
 ]
 
-[tool.uv.sources]
-syft-flwr = { path = "/Users/khoaguin/Desktop/projects/OpenMined/syft-flwr" , editable = true }  # for development
+# [tool.uv.sources]
+# syft-flwr = { git = "https://github.com/OpenMined/syft-flwr/", branch = "feat/rds-dashboard-integration" }  # for development
+# syft-flwr = { path = "../../../syft-flwr", editable = true }  # local development
 
 [tool.uv]
 package = false
