--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,15 @@ name = "syft-flwr"
 version = "0.4.3"
 description = "syft_flwr is an open source framework that facilitate federated learning projects using Flower over the SyftBox protocol"
 readme = "README.md"
-requires-python = ">=3.11,<3.14"
+requires-python = ">=3.12,<3.14"
 dependencies = [
     "syft-rds>=0.5.0",
+    "syft-client>=0.1.93",
     "flwr[simulation]==1.23.0",
     "flwr-datasets[vision]>=0.5.0",
+    "huggingface-hub>=1.1.4",
     "loguru>=0.7.3",
-    "safetensors>=0.6.2",
+    "safetensors>=0.7.0",
     "typing-extensions>=4.13.0",
     "tomli>=2.3.0",
     "tomli-w>=1.2.0",
