--- a/.gitignore
+++ b/.gitignore
@@ -68,8 +68,9 @@ instance/
 # Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
+# documentation
 docs/_build/
+docs/plans/
 
 # PyBuilder
 .pybuilder/
@@ -189,3 +190,8 @@ checkpoints/
 
 # AI stuff
 .claude/
+
+# credentials and keys
+credentials/
+keys/
+secrets/
