new client architecture with SyftFlwrClient and adapters for syft_client and syft_core.

--- a/notebooks/fl-diabetes-prediction/fl-diabetes-prediction/pyproject.toml
+++ b/notebooks/fl-diabetes-prediction/fl-diabetes-prediction/pyproject.toml
@@ -21,9 +21,10 @@ dependencies = [
     "syft_flwr",
 ]
 
-# [tool.uv.sources.syft-flwr]
-# path = ""
-# editable = true
+
+[tool.uv.sources]
+# syft-flwr = { path = "../syft-flwr", editable = true }  # local development
+syft-flwr = { git = "https://github.com/OpenMined/syft-flwr/", branch = "feat/syft-client-p2p" }  # for development
 
 [tool.hatch.build.targets.wheel]
 packages = [
