--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ dependencies = [
     "tomli-w>=1.2.0",
 ]
 
-# [tool.uv.sources]
-# syft-client = { path = "../syft-client", editable = true }  # for development
-# syft-rds = { git = "https://github.com/OpenMined/syft-rds/", branch = "feature/python-runtime-uv-envs" }  # for development
+[tool.uv.sources]
+# syft-client = { path = "/Users/khoaguin/Desktop/projects/OpenMined/syft-client", editable = true }  # for development
+syft-client = { git = "https://github.com/OpenMined/syft-client/", branch = "khoa/python_job_folder_submission" }  # for development
 # syft-rds = { path = "../syft-rds", editable = true }  # for development
 
 [project.scripts]
