--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
 
 [tool.uv.sources]
 syft-client = { git = "https://github.com/OpenMined/syft-client/", branch = "khoa/python_job_folder_submission" }  # for development
-# syft-client = { path = "/Users/khoaguin/Desktop/projects/OpenMined/syft-client", editable = true }  # for development
+# syft-client = { path = "../syft-client", editable = true }  # for development
 # syft-rds = { path = "../syft-rds", editable = true }  # for development
 
 [project.scripts]
@@ -30,12 +30,14 @@ dev = [
     "ipykernel>=6.30.1",
     "ipywidgets>=8.1.7",
     "pytest>=8.4.1",
+    "pytest-cov>=4.1.0",
+    "pytest-xdist>=3.8.0",
+    "pytest-asyncio>=1.1.0",
+    "python-dotenv>=1.0.0",
     "pre-commit>=4.3.0",
     "torch>=2.0.0",
     "imblearn>=0.0",
     "jupyterlab",
-    "pytest-xdist>=3.8.0",
-    "pytest-asyncio>=1.1.0",
     "commitizen>=4.9.1",
 ]
 
@@ -60,6 +62,11 @@ extend-select = ["I"]
 
 [tool.ruff.lint.per-file-ignores]
 "**/__init__.py" = ["F401"]
+
+[tool.pytest.ini_options]
+markers = [
+    "slow: marks tests as slow (integration tests with Google Drive)",
+]
 
 [tool.commitizen]
 name = "cz_conventional_commits"
