--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -1,25 +1,31 @@
 name: Integration Tests (Google Drive)
 
 on:
-  workflow_dispatch:  # Manual trigger only
-  # Uncomment for nightly runs:
-  # schedule:
-  #   - cron: '0 2 * * *'  # 2 AM UTC daily
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
+  workflow_dispatch:
 
 jobs:
   integration-test:
-    name: Integration Tests
-    runs-on: ubuntu-latest
+    name: Integration Tests (Python ${{ matrix.python-version }}, ${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
     # Only run if secrets are available (skip for forks)
     if: github.repository == 'OpenMined/syft-flwr'
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest]  # Windows excluded (chmod not supported)
+        python-version: ['3.10', '3.11', '3.12']
 
     steps:
     - uses: actions/checkout@v5
 
-    - name: Set up Python 3.12
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v6
       with:
-        python-version: '3.12'
+        python-version: ${{ matrix.python-version }}
 
     - name: Install uv
       uses: astral-sh/setup-uv@v7
