--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -9,23 +9,18 @@ on:
 
 jobs:
   integration-test:
-    name: Integration Tests (Python ${{ matrix.python-version }}, ${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
+    name: Integration Tests
+    runs-on: ubuntu-latest
     # Only run if secrets are available (skip for forks)
     if: github.repository == 'OpenMined/syft-flwr'
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest]  # Windows excluded (chmod not supported)
-        python-version: ['3.10', '3.11', '3.12']
 
     steps:
     - uses: actions/checkout@v5
 
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.12
       uses: actions/setup-python@v6
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.12'
 
     - name: Install uv
       uses: astral-sh/setup-uv@v7
