--- a/notebooks/fl-diabetes-prediction/pyproject.toml
+++ b/notebooks/fl-diabetes-prediction/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
 
 [tool.uv.sources]
 # syft-flwr = { path = "/Users/khoaguin/Desktop/projects/OpenMined/syft-flwr", editable = true }  # local development
-syft-flwr = { git = "https://github.com/OpenMined/syft-flwr/", branch = "feat/syft-client-p2p" }  # for development
+syft-flwr = { git = "https://github.com/OpenMined/syft-flwr/", branch = "main" }  # for development
 
 [tool.uv]
 package = false
