--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-syft-client = { git = "https://github.com/OpenMined/syft-client/", branch = "fix/syftbox_manager_no_peers_attribute" }  # for development
+syft-client = { git = "https://github.com/OpenMined/syft-client/", branch = "for-syft-flwr" }  # for development
 # syft-client = { path = "../syft-client", editable = true }  # for development
 # syft-rds = { path = "../syft-rds", editable = true }  # for development
 
